# gigadoram-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/circuits/: Cargo.toml
crates/circuits/src/: batcher.rs  cht_lookup.rs  dummy_check.rs  lib.rs  lowmc.rs  lowmc2.rs  lowmc_params.rs  network.rs  oblivious_sort.rs  replace_if_dummy.rs  xy_if_xs_equal.rs
crates/circuits/src/lowmc/: bit_sliced.rs  common.rs  gigadoram.rs  mod.rs  mpc.rs  packed_u64.rs  packed_u8_lanes.rs  packed_u8_lanes_with_speed_cache.rs  parameters.rs  plain.rs
crates/circuits/tests/: batcher.rs  cht_lookup.rs  dummy_check.rs  lowmc.rs  lowmc2.rs  lowmc_implementations.rs  mod.rs  oblivious_sort.rs  replace_if_dummy.rs  xy_if_xs_equal.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  context.rs  doram.rs  lib.rs  mpc.rs  timings.rs
crates/data-structures/: Cargo.toml
crates/data-structures/src/: cht.rs  lib.rs  ohtable.rs  rebuild_buffer.rs  speed_cache.rs
crates/data-structures/tests/: cht.rs  ohtable.rs  speed_cache.rs
crates/data-structures/tests/common/: mod.rs
crates/doram/: Cargo.toml
crates/doram/src/: lib.rs
crates/doram/tests/: gigadoram.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: array_shuffle.rs  bigintshare.rs  cast.rs  cht.rs  circuits.rs  lib.rs  permutation.rs  prf.rs  timed_network.rs  types.rs  utils.rs  value.rs
crates/test/: Cargo.toml
crates/test/src/: main.rs
crates/test/tests/: array_shuffler.rs  doram_mock.rs  lowmc.rs  ohtable_mock.rs  speed_cache.rs
crates/test/tests/fixtures/array_shuffler/: array_shuffler_party1.json  array_shuffler_party2.json  array_shuffler_party3.json
crates/test/tests/fixtures/lowmc/: generate_fixture.cpp  lowmc_cpp_fixture.json
crates/test/tests/fixtures/speed_cache/: speed_cache_after_query_x3.json  speed_cache_after_write.json  speed_cache_query_x3.json
scripts/: local_benchmarks.sh  multi_server_benchmarks.sh
