[workspace]
resolver = "3"
members = [
    "crates/circuits",
    "crates/primitives",
    "crates/data-structures",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https://github.com/TaceoLabs/co-snarks"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[workspace.dependencies]
circuits = { path = "crates/circuits" }
eyre = "0.6"
mpc-core = { git = "https://github.com/TaceoLabs/co-snarks", branch = "main" }
mpc-net = { git = "https://github.com/TaceoLabs/co-snarks", branch = "main", features = ["local"] }
num-traits = "0.2"
primitives = { path = "crates/primitives" }
rand = "0.8"
rand_chacha = "0.3"
