[workspace]
resolver = "3"
members = [
    "crates/circuits",
    "crates/primitives",
    "crates/data-structures",
    "crates/doram",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https://github.com/TaceoLabs/gigadoram-rs"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[workspace.dependencies]
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
circuits = { path = "crates/circuits" }
data-structures = { path = "crates/data-structures" }
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
mpc-core = { git = "https://github.com/TaceoLabs/co-snarks", rev = "5d6bd19" }
mpc-net = { git = "https://github.com/TaceoLabs/co-snarks", rev = "5d6bd19", features = ["local"] }
num-traits = "0.2"
primitives = { path = "crates/primitives" }
rand = "0.8"
rand_chacha = "0.3"
toml = "0.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
