[package]
name = "circuits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
eyre.workspace = true
mpc-core.workspace = true
mpc-net.workspace = true
primitives.workspace = true
