[package]
name = "core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
mpc-core.workspace = true
mpc-net.workspace = true
primitives.workspace = true
structures.workspace = true
