[package]
name = "data-structures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-bn254.workspace = true
mpc-core.workspace = true
primitives.workspace = true
