[package]
name = "data-structures"
description = "Oblivious data structures for GigaDoram: the oblivious hash table, CHT, and SpeedCache."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
circuits.workspace = true
eyre.workspace = true
mpc-core.workspace = true
mpc-net.workspace = true
primitives.workspace = true

[dev-dependencies]
rand.workspace = true
