[package]
name = "doram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
circuits.workspace = true
data-structures.workspace = true
clap.workspace = true
eyre.workspace = true
mpc-core.workspace = true
mpc-net.workspace = true
primitives.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
