[package]
name = "primitives"
description = "Shared MPC primitives for GigaDoram."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
bytes.workspace = true
eyre.workspace = true
mpc-core.workspace = true
mpc-net.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_chacha.workspace = true
