[package]
name = "test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
core.workspace = true
mpc-core.workspace = true
mpc-net.workspace = true
primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
structures.workspace = true
